{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 145,
  "lineage": "d0a456c6-5cc0-be6e-dcc3-d33fc5fe4553",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "kodehauz_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6ab1101127fad7f",
            "association_id": "eipassoc-04b88898a3fd55129",
            "domain": "vpc",
            "id": "eipalloc-0b6ab1101127fad7f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-049b6aff55e6b69cc",
            "private_dns": "ip-10-0-0-224.ec2.internal",
            "private_ip": "10.0.0.224",
            "public_dns": "ec2-35-172-26-177.compute-1.amazonaws.com",
            "public_ip": "35.172.26.177",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kodehauz_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:internet-gateway/igw-02be18cb854484ce4",
            "id": "igw-02be18cb854484ce4",
            "owner_id": "353928175117",
            "tags": {
              "Name": "kodehauz_igw"
            },
            "tags_all": {
              "Name": "kodehauz_igw"
            },
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "dependencies": [
            "aws_vpc.kodehauz_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "kodehauz_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/kodehauz-lb/1d670b0bd2c03c84",
            "arn_suffix": "app/kodehauz-lb/1d670b0bd2c03c84",
            "desync_mitigation_mode": "defensive",
            "dns_name": "kodehauz-lb-905656328.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/kodehauz-lb/1d670b0bd2c03c84",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kodehauz-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e571e83bceb8efd6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-027197229df8a527e"
              },
              {
                "subnet_id": "subnet-0cc3121ecc03f360c"
              }
            ],
            "subnets": [
              "subnet-027197229df8a527e",
              "subnet-0cc3121ecc03f360c"
            ],
            "vpc_id": "vpc-082446b4a63d24d83",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_autoscaling_group.kodehauz_asg",
            "aws_launch_template.kodehauz_app_lt",
            "aws_lb_target_group.kodehauz_tg",
            "aws_security_group.kodehauz_lb_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "kodehauz_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/kodehauz-lb/1d670b0bd2c03c84/9c8b0eb0311226af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/kodehauz-tg/aeff8fabc102fa29",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:listener/app/kodehauz-lb/1d670b0bd2c03c84/9c8b0eb0311226af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:loadbalancer/app/kodehauz-lb/1d670b0bd2c03c84",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_autoscaling_group.kodehauz_asg",
            "aws_launch_template.kodehauz_app_lt",
            "aws_lb.kodehauz_lb",
            "aws_lb_target_group.kodehauz_tg",
            "aws_security_group.kodehauz_lb_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kodehauz_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/kodehauz-tg/aeff8fabc102fa29",
            "arn_suffix": "targetgroup/kodehauz-tg/aeff8fabc102fa29",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:353928175117:targetgroup/kodehauz-tg/aeff8fabc102fa29",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kodehauz-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "dependencies": [
            "aws_vpc.kodehauz_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "kodehauz_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6ab1101127fad7f",
            "connectivity_type": "public",
            "id": "nat-06076e1c285b43f6e",
            "network_interface_id": "eni-049b6aff55e6b69cc",
            "private_ip": "10.0.0.224",
            "public_ip": "35.172.26.177",
            "subnet_id": "subnet-0cc3121ecc03f360c"
          },
          "dependencies": [
            "aws_eip.kodehauz_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-032920f08740a03711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06076e1c285b43f6e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032920f08740a0371",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.kodehauz_nat",
            "aws_route_table.private-rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02be18cb854484ce4",
            "id": "r-rtb-0c2d0207455d776e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c2d0207455d776e7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kodehauz_igw",
            "aws_route_table.public-rt",
            "aws_vpc.kodehauz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:route-table/rtb-032920f08740a0371",
            "id": "rtb-032920f08740a0371",
            "owner_id": "353928175117",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06076e1c285b43f6e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kodehauz-priv-rt"
            },
            "tags_all": {
              "Name": "kodehauz-priv-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kodehauz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:route-table/rtb-0c2d0207455d776e7",
            "id": "rtb-0c2d0207455d776e7",
            "owner_id": "353928175117",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02be18cb854484ce4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kodehauz-pub-rt"
            },
            "tags_all": {
              "Name": "kodehauz-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kodehauz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004f15fd23dbe861f",
            "route_table_id": "rtb-032920f08740a0371",
            "subnet_id": "subnet-03709f07d1653a32f"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet_1",
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0e6f337db663ec1",
            "route_table_id": "rtb-032920f08740a0371",
            "subnet_id": "subnet-0874475b342b73ef0"
          },
          "dependencies": [
            "aws_route_table.private-rt",
            "aws_subnet.private_subnet_2",
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb18a8a31618273e",
            "route_table_id": "rtb-0c2d0207455d776e7",
            "subnet_id": "subnet-0cc3121ecc03f360c"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a90d47a3788eb387",
            "route_table_id": "rtb-0c2d0207455d776e7",
            "subnet_id": "subnet-027197229df8a527e"
          },
          "dependencies": [
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-035efffd5e4c3cab2",
            "description": "Allow ssh inbound traffic from Bastion, and http traffic from loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035efffd5e4c3cab2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f34838c9a4f1126"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e571e83bceb8efd6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "APP_SG",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.kodehauz_lb_sg",
            "aws_vpc.kodehauz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-03f34838c9a4f1126",
            "description": "Allow Bastion access to private servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f34838c9a4f1126",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kodehauz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kodehauz_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:security-group/sg-0e571e83bceb8efd6",
            "description": "Allow Inbound HTTP Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e571e83bceb8efd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Load Balancer Security Group",
            "name_prefix": "",
            "owner_id": "353928175117",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kodehauz_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-03709f07d1653a32f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03709f07d1653a32f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353928175117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kodehauz_priv_sub_1"
            },
            "tags_all": {
              "Name": "kodehauz_priv_sub_1"
            },
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "dependencies": [
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-0874475b342b73ef0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0874475b342b73ef0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "353928175117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kodehauz_priv_sub_2"
            },
            "tags_all": {
              "Name": "kodehauz_priv_sub_2"
            },
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "dependencies": [
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-0cc3121ecc03f360c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc3121ecc03f360c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353928175117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kodehauz_pub_sub_1"
            },
            "tags_all": {
              "Name": "kodehauz_pub_sub_1"
            },
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "dependencies": [
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:subnet/subnet-027197229df8a527e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027197229df8a527e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "353928175117",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kodehauz_pub_sub_2"
            },
            "tags_all": {
              "Name": "kodehauz_pub_sub_2"
            },
            "vpc_id": "vpc-082446b4a63d24d83"
          },
          "dependencies": [
            "aws_vpc.kodehauz_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kodehauz_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:353928175117:vpc/vpc-082446b4a63d24d83",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2d0ee68936516b0",
            "default_route_table_id": "rtb-0496a92bf763d62c3",
            "default_security_group_id": "sg-0c5cdcbb86e12914a",
            "dhcp_options_id": "dopt-0ff179fee1ba4567e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-082446b4a63d24d83",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0496a92bf763d62c3",
            "owner_id": "353928175117",
            "tags": {
              "Name": "kodehauz-vpc"
            },
            "tags_all": {
              "Name": "kodehauz-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}